--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,14 @@
-ul {
-  list-style: none;
-  padding-left: 10px;
-}
 strong {
   font-size: 60px;
 }
-
-.howTheWetherIs {
-  margin-left: 42px;
-  margin-top: -7px;
+ul {
+  list-style: none;
 }
-
 .row {
   display: flex;
   margin-bottom: 38px;
   flex-wrap: wrap;
   margin-left: -15px;
-}
-.form-control {
-  padding: 0.375rem 1.75rem;
 }
 
 .row-2 {
@@ -29,25 +19,8 @@ strong {
   flex: 0 0 80%;
   max-width: 65%;
 }
-
-.card-title {
-  font-size: 18px;
-  padding-top: 8px;
-}
-.raw {
-  padding-bottom: 40px;
-  padding-top: 30px;
-}
-
 .card.border.mb-3 {
   border-radius: 8px;
-}
-.col1 {
-  font-size: 20px;
-}
-
-.fa-cloud {
-  color: aquamarine;
 }
 .img-center {
   float: left;
@@ -58,7 +31,7 @@ strong {
 .fa-map-marker-alt:hover {
   color: #0056b3;
 }
-#temperature {
+.temperature {
   font-size: 75px;
   margin-left: 35px;
 }
