--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
 .container {
-  width: 847px;
+  max-width: 847px;
   padding: 44px;
-  height: 630px;
   font-family: arial, sans-serif;
 }
 
 .card-bodyfirstbox {
-  height: 100%;
   box-sizing: border-box;
   padding: 20px;
   padding-top: 20px;
