--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@ strong {
 }
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .row {
   display: flex;
@@ -22,8 +24,11 @@ ul {
   color: #0056b3;
 }
 .temp {
-  font-size: 72px;
-  margin-left: 17px;
+  color: #212121;
+  font-size: 64px;
+  line-height: 64px;
+  font-weight: 400;
+  margin-left: 10px;
 }
 
 .bottom-link {
@@ -34,10 +39,13 @@ ul {
 }
 .pane-right {
   float: right;
-  margin-top: 23px;
+  margin-top: -13px;
   margin-right: 66px;
   font-size: 21px;
 }
 .footer {
   font-size: 12px;
+}
+.float-left {
+  margin-top: 15px;
 }
