--- a/src/C-F.css
+++ b/src/C-F.css
@@ -9,9 +9,13 @@ a:hover {
 }
 
 .cel-fahrenheit {
+  color: #212121;
+  font-size: 16px;
+  font-weight: 400;
   position: relative;
-  top: -174px;
-  left: 168px;
+  line-height: 1;
+  top: -38px;
+  display: inline;
 }
 
 .cel-fahrenheit:hover {
