--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
+.weather-app {
+  max-width: 720px;
+  margin: auto;
+}
 .container {
   color: black;
-  max-width: 847px;
   padding: 44px;
-  font-family: arial, sans-serif;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .card-bodyfirstbox {
   box-sizing: border-box;
   padding: 20px;
   padding-top: 20px;
-  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
-  border-radius: 8px;
+  background-image: linear-gradient(to top, #fff1eb 0%, #c2e6f7 100%);
+  border-radius: 4px;
+  font-family: arial, sans-serif;
+  line-height: 1.2;
+  width: 100%;
+  height: 500px;
 }
