--- a/src/C-F.css
+++ b/src/C-F.css
@@ -8,16 +8,10 @@ a:hover {
   text-decoration: none;
 }
 
-.cel-fahrenheit {
+.unit {
   color: #212121;
-  font-size: 16px;
-  font-weight: 400;
+  color: #212121;
   position: relative;
   line-height: 1;
-  top: -38px;
-  display: inline;
-}
-
-.cel-fahrenheit:hover {
-  color: #0056b3;
+  top: 21px;
 }
